--- a/wordnote/index.html
+++ b/wordnote/index.html
@@ -111,7 +111,7 @@
         </article>
 
         <!-- footer -->
-        <footer class="bg-[#45abe5] py-[50px] text-center text-white">
+        <footer class="bg-[#45abe5] py-[50px] text-center text-white" onclick="topfun()" id="topbtn">
             &#169; www.wordnote.com
         </footer>
     </div>
