--- a/wordnote/contact.html
+++ b/wordnote/contact.html
@@ -103,7 +103,7 @@
         <br><br>
 
         <!-- footer -->
-        <footer class="bg-[#45abe5] py-[50px] text-center text-white">
+        <footer class="bg-[#45abe5] py-[50px] text-center text-white" onclick="topfun()" id="topbtn">
             &#169; www.wordnote.com
         </footer>
     </div>
