--- a/wordnote/product.html
+++ b/wordnote/product.html
@@ -125,7 +125,7 @@
         <br>
 
         <!-- footer -->
-        <footer class="bg-[#45abe5] py-[50px] text-center text-white">
+        <footer class="bg-[#45abe5] py-[50px] text-center text-white" onclick="topfun()" id="topbtn">
             &#169; www.wordnote.com
         </footer>
     </div>
